--- a/index.html
+++ b/index.html
@@ -3,9 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <title>Personal Finance Assistant</title>
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 2em; }
+    table { border-collapse: collapse; margin-top: 1em; }
+    th, td { border: 1px solid #ccc; padding: 6px 10px; }
+    th { background: #f0f0f0; }
+    #csv-table { max-width: 100%; overflow-x: auto; }
+  </style>
 </head>
 <body>
-  <h1>Welcome to Your Personal Finance Assistant</h1>
-  <p>This site will help you analyze your financial transactions. More features coming soon!</p>
+  <h1>Personal Finance Assistant</h1>
+  <p>Upload your bank or credit card CSV statements below.</p>
+  <input type="file" id="csvFiles" multiple accept=".csv" />
+  <div id="csv-table"></div>
+  <script>
+    document.getElementById('csvFiles').addEventListener('change', function(event) {
+      const files = event.target.files;
+      if (!files.length) return;
+      let output = '';
+      for (let i = 0; i < files.length; i++) {
+        Papa.parse(files[i], {
+          header: true,
+          skipEmptyLines: true,
+          complete: function(results) {
+            output += `<h3>${files[i].name}</h3>`;
+            output += '<table><thead><tr>';
+            // Table headers
+            for (const header of results.meta.fields) {
+              output += `<th>${header}</th>`;
+            }
+            output += '</tr></thead><tbody>';
+            // Table rows
+            for (const row of results.data) {
+              output += '<tr>';
+              for (const header of results.meta.fields) {
+                output += `<td>${row[header]}</td>`;
+              }
+              output += '</tr>';
+            }
+            output += '</tbody></table>';
+            document.getElementById('csv-table').innerHTML = output;
+          }
+        });
+      }
+    });
+  </script>
 </body>
 </html>
