--- a/index.html
+++ b/index.html
@@ -10,40 +10,89 @@
     th, td { border: 1px solid #ccc; padding: 6px 10px; }
     th { background: #f0f0f0; }
     #csv-table { max-width: 100%; overflow-x: auto; }
+    .summary { margin-top: 1em; margin-bottom: 1em; }
+    .summary span { display: inline-block; min-width: 180px; }
   </style>
 </head>
 <body>
   <h1>Personal Finance Assistant</h1>
   <p>Upload your bank or credit card CSV statements below.</p>
   <input type="file" id="csvFiles" multiple accept=".csv" />
+  <div class="summary" id="summary"></div>
   <div id="csv-table"></div>
   <script>
+    function guessAmount(row) {
+      // Try to find the amount column
+      for (const key of Object.keys(row)) {
+        if (key.toLowerCase().includes('amount')) return parseFloat(row[key].replace(/[^-\d.]/g, '') || 0);
+        if (key.toLowerCase().includes('debit')) return -Math.abs(parseFloat(row[key].replace(/[^-\d.]/g, '') || 0));
+        if (key.toLowerCase().includes('credit')) return Math.abs(parseFloat(row[key].replace(/[^-\d.]/g, '') || 0));
+      }
+      return 0;
+    }
+    function getDate(row) {
+      for (const key of Object.keys(row)) {
+        if (key.toLowerCase().includes('date')) return row[key];
+      }
+      return '';
+    }
     document.getElementById('csvFiles').addEventListener('change', function(event) {
       const files = event.target.files;
       if (!files.length) return;
+      let allRows = [];
+      let fileCount = 0;
+      let filesToParse = files.length;
       let output = '';
+      // Parse each file
       for (let i = 0; i < files.length; i++) {
         Papa.parse(files[i], {
           header: true,
           skipEmptyLines: true,
           complete: function(results) {
-            output += `<h3>${files[i].name}</h3>`;
-            output += '<table><thead><tr>';
-            // Table headers
-            for (const header of results.meta.fields) {
-              output += `<th>${header}</th>`;
-            }
-            output += '</tr></thead><tbody>';
-            // Table rows
-            for (const row of results.data) {
-              output += '<tr>';
-              for (const header of results.meta.fields) {
-                output += `<td>${row[header]}</td>`;
+            // Merge rows, ignore empty lines
+            allRows = allRows.concat(results.data.filter(row => Object.values(row).join('').trim() !== ''));
+            fileCount++;
+            if (fileCount === filesToParse) {
+              // All files parsed, now process data
+              // Remove duplicates by Date+Description+Amount
+              const seen = new Set();
+              const mergedRows = [];
+              for (const row of allRows) {
+                const amount = guessAmount(row);
+                const date = getDate(row) || '';
+                const desc = (row.Description || row['Transaction Description'] || row.Payee || '').trim();
+                const key = [date, desc, amount].join('|');
+                if (!seen.has(key)) {
+                  seen.add(key);
+                  mergedRows.push({...row, _amount: amount, _date: date, _desc: desc});
+                }
               }
-              output += '</tr>';
+              // Calculate summary
+              let income = 0, expense = 0;
+              for (const row of mergedRows) {
+                const amt = row._amount;
+                if (amt > 0) income += amt;
+                else if (amt < 0) expense += amt;
+              }
+              // Display summary
+              document.getElementById('summary').innerHTML = `
+                <span><b>Total Income:</b> $${income.toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2})}</span>
+                <span><b>Total Expenses:</b> $${Math.abs(expense).toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2})}</span>
+                <span><b>Net Cash Flow:</b> $${(income + expense).toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2})}</span>
+              `;
+              // Show merged table (first 20 columns only)
+              const headers = Object.keys(mergedRows[0] || {}).slice(0, 20);
+              output = '<table><thead><tr>';
+              for (const header of headers) output += `<th>${header}</th>`;
+              output += '</tr></thead><tbody>';
+              for (const row of mergedRows) {
+                output += '<tr>';
+                for (const header of headers) output += `<td>${row[header] || ''}</td>`;
+                output += '</tr>';
+              }
+              output += '</tbody></table>';
+              document.getElementById('csv-table').innerHTML = output;
             }
-            output += '</tbody></table>';
-            document.getElementById('csv-table').innerHTML = output;
           }
         });
       }
