--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Personal Finance Assistant</title>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
   <style>
     body { font-family: Arial, sans-serif; margin: 2em; }
     table { border-collapse: collapse; margin-top: 1em; }
@@ -12,6 +13,8 @@
     #csv-table { max-width: 100%; overflow-x: auto; }
     .summary { margin-top: 1em; margin-bottom: 1em; }
     .summary span { display: inline-block; min-width: 180px; }
+    .charts { display: flex; flex-wrap: wrap; gap: 40px; align-items: flex-end; margin-top: 2em; }
+    .chart-container { min-width: 320px; }
   </style>
 </head>
 <body>
@@ -19,10 +22,35 @@
   <p>Upload your bank or credit card CSV statements below.</p>
   <input type="file" id="csvFiles" multiple accept=".csv" />
   <div class="summary" id="summary"></div>
+  <div class="charts">
+    <div class="chart-container">
+      <h3>Expenses by Category</h3>
+      <canvas id="categoryChart" width="350" height="350"></canvas>
+    </div>
+    <div class="chart-container">
+      <h3>Monthly Expense Trend</h3>
+      <canvas id="trendChart" width="420" height="350"></canvas>
+    </div>
+  </div>
   <div id="csv-table"></div>
   <script>
+    // Simple categorization based on keywords
+    function categorize(desc) {
+      desc = (desc || "").toLowerCase();
+      if (/starbucks|coffee|cafe|restaurant|food|eat|drink|dining/.test(desc)) return "Food & Drink";
+      if (/amazon|shopping|store|mall|target|walmart/.test(desc)) return "Shopping";
+      if (/uber|lyft|taxi|transport|bus|train|transit|metro|flight|airlines|airline/.test(desc)) return "Transport";
+      if (/netflix|hulu|prime|entertainment|movie|cinema|spotify/.test(desc)) return "Entertainment";
+      if (/rent|lease|apartment|housing/.test(desc)) return "Rent";
+      if (/utility|electric|water|gas|internet|phone|cable/.test(desc)) return "Utilities";
+      if (/insurance/.test(desc)) return "Insurance";
+      if (/salary|payroll|paycheck|income|deposit/.test(desc)) return "Income";
+      if (/medical|health|doctor|hospital|pharmacy/.test(desc)) return "Medical";
+      if (/atm|cash/.test(desc)) return "Cash";
+      if (/bank|transfer/.test(desc)) return "Bank Transfer";
+      return "Other";
+    }
     function guessAmount(row) {
-      // Try to find the amount column
       for (const key of Object.keys(row)) {
         if (key.toLowerCase().includes('amount')) return parseFloat(row[key].replace(/[^-\d.]/g, '') || 0);
         if (key.toLowerCase().includes('debit')) return -Math.abs(parseFloat(row[key].replace(/[^-\d.]/g, '') || 0));
@@ -36,6 +64,13 @@
       }
       return '';
     }
+    function getDesc(row) {
+      for (const key of Object.keys(row)) {
+        if (key.toLowerCase().includes('desc') || key.toLowerCase().includes('payee') || key.toLowerCase().includes('merchant')) return row[key];
+      }
+      return '';
+    }
+    let categoryChart, trendChart;
     document.getElementById('csvFiles').addEventListener('change', function(event) {
       const files = event.target.files;
       if (!files.length) return;
@@ -43,28 +78,25 @@
       let fileCount = 0;
       let filesToParse = files.length;
       let output = '';
-      // Parse each file
       for (let i = 0; i < files.length; i++) {
         Papa.parse(files[i], {
           header: true,
           skipEmptyLines: true,
           complete: function(results) {
-            // Merge rows, ignore empty lines
             allRows = allRows.concat(results.data.filter(row => Object.values(row).join('').trim() !== ''));
             fileCount++;
             if (fileCount === filesToParse) {
-              // All files parsed, now process data
               // Remove duplicates by Date+Description+Amount
               const seen = new Set();
               const mergedRows = [];
               for (const row of allRows) {
                 const amount = guessAmount(row);
                 const date = getDate(row) || '';
-                const desc = (row.Description || row['Transaction Description'] || row.Payee || '').trim();
+                const desc = getDesc(row) || '';
                 const key = [date, desc, amount].join('|');
                 if (!seen.has(key)) {
                   seen.add(key);
-                  mergedRows.push({...row, _amount: amount, _date: date, _desc: desc});
+                  mergedRows.push({...row, _amount: amount, _date: date, _desc: desc, _category: categorize(desc)});
                 }
               }
               // Calculate summary
@@ -74,12 +106,66 @@
                 if (amt > 0) income += amt;
                 else if (amt < 0) expense += amt;
               }
-              // Display summary
               document.getElementById('summary').innerHTML = `
                 <span><b>Total Income:</b> $${income.toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2})}</span>
                 <span><b>Total Expenses:</b> $${Math.abs(expense).toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2})}</span>
                 <span><b>Net Cash Flow:</b> $${(income + expense).toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2})}</span>
               `;
+              // Prepare data for charts
+              const categoryTotals = {};
+              const monthlyTotals = {};
+              mergedRows.forEach(row => {
+                const amt = row._amount;
+                if (amt < 0) {
+                  // Pie: by category
+                  categoryTotals[row._category] = (categoryTotals[row._category] || 0) + Math.abs(amt);
+                  // Line: by month (YYYY-MM)
+                  let d = new Date(row._date);
+                  let month;
+                  if (!isNaN(d.getTime())) {
+                    month = `${d.getFullYear()}-${(d.getMonth()+1).toString().padStart(2, '0')}`;
+                  } else {
+                    // fallback: try substring
+                    month = (row._date || '').substring(0,7);
+                  }
+                  monthlyTotals[month] = (monthlyTotals[month] || 0) + Math.abs(amt);
+                }
+              });
+              // Draw Category Pie Chart
+              const catLabels = Object.keys(categoryTotals);
+              const catData = Object.values(categoryTotals);
+              if (categoryChart) categoryChart.destroy();
+              categoryChart = new Chart(document.getElementById('categoryChart').getContext('2d'), {
+                type: 'pie',
+                data: {
+                  labels: catLabels,
+                  datasets: [{ data: catData, backgroundColor: [
+                    "#4e79a7","#f28e2b","#e15759","#76b7b2","#59a14f","#edc949","#af7aa1","#ff9da7","#9c755f","#bab0ab"
+                  ]}]
+                },
+                options: { plugins: { legend: { position: 'right' } } }
+              });
+              // Draw Monthly Trend Line Chart
+              const sortedMonths = Object.keys(monthlyTotals).sort();
+              const trendData = sortedMonths.map(m => monthlyTotals[m]);
+              if (trendChart) trendChart.destroy();
+              trendChart = new Chart(document.getElementById('trendChart').getContext('2d'), {
+                type: 'line',
+                data: {
+                  labels: sortedMonths,
+                  datasets: [{
+                    label: 'Expenses',
+                    data: trendData,
+                    fill: false,
+                    borderColor: '#e15759',
+                    backgroundColor: '#e15759',
+                    tension: 0.2
+                  }]
+                },
+                options: {
+                  scales: { y: { beginAtZero: true } }
+                }
+              });
               // Show merged table (first 20 columns only)
               const headers = Object.keys(mergedRows[0] || {}).slice(0, 20);
               output = '<table><thead><tr>';
