--- a/index.html
+++ b/index.html
@@ -3,27 +3,134 @@
 <head>
   <meta charset="UTF-8">
   <title>Personal Finance Assistant</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; margin: 2em; }
-    table { border-collapse: collapse; margin-top: 1em; }
-    th, td { border: 1px solid #ccc; padding: 6px 10px; }
-    th { background: #f0f0f0; }
-    #csv-table { max-width: 100%; overflow-x: auto; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 2em;
+      background: #fafbfc;
+    }
+    h1 { font-size: 2rem; margin-bottom: 0.5em; }
     .summary { margin-top: 1em; margin-bottom: 1em; }
-    .summary span { display: inline-block; min-width: 180px; }
-    .charts { display: flex; flex-wrap: wrap; gap: 40px; align-items: flex-end; margin-top: 2em; }
-    .chart-container { min-width: 320px; }
-    .filters { margin: 1.5em 0 1.5em 0; padding: 1em; background: #f7f7f7; border-radius: 8px; display: flex; flex-wrap: wrap; gap: 1em; align-items: center; }
+    .summary span { display: inline-block; min-width: 180px; margin-bottom: 0.5em; }
+    .charts {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 40px;
+      align-items: flex-end;
+      margin-top: 2em;
+    }
+    .chart-container {
+      min-width: 320px;
+      flex: 1 1 320px;
+    }
+    .filters {
+      margin: 1.5em 0 1.5em 0;
+      padding: 1em;
+      background: #f7f7f7;
+      border-radius: 8px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1em;
+      align-items: center;
+    }
     .filters label { font-weight: bold; margin-right: 0.5em; }
-    .filters select, .filters input[type="date"] { padding: 2px 8px; }
-    .cat-edit-select { min-width: 120px; }
+    .filters select, .filters input[type="date"] {
+      padding: 6px 12px;
+      font-size: 1em;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+    }
+    .filters button { padding: 6px 12px; border-radius: 4px; border: none; background: #4e79a7; color: #fff; font-weight: bold; }
+    #csv-table {
+      max-width: 100%;
+      overflow-x: auto;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.03);
+      margin-bottom: 2em;
+    }
+    table {
+      border-collapse: collapse;
+      margin-top: 1em;
+      min-width: 600px;
+      width: 100%;
+      font-size: 1em;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px 10px;
+      text-align: left;
+      max-width: 220px;
+      word-break: break-word;
+    }
+    th {
+      background: #f0f0f0;
+      font-size: 1em;
+    }
+    .cat-edit-select {
+      min-width: 120px;
+      padding: 5px 8px;
+      border-radius: 4px;
+      border: 1px solid #bbb;
+      font-size: 1em;
+    }
+    input[type="file"] {
+      font-size: 1em;
+      margin-bottom: 1em;
+    }
+    @media (max-width: 900px) {
+      .charts {
+        flex-direction: column;
+        gap: 20px;
+      }
+      .chart-container {
+        min-width: 0;
+        width: 100%;
+      }
+      table {
+        min-width: 450px;
+        font-size: 0.95em;
+      }
+    }
+    @media (max-width: 600px) {
+      body {
+        margin: 0.7em;
+      }
+      h1 { font-size: 1.4rem; }
+      .charts, .filters {
+        flex-direction: column;
+        gap: 10px;
+        align-items: stretch;
+      }
+      .summary span {
+        display: block;
+        min-width: 0;
+        font-size: 0.97em;
+      }
+      table {
+        min-width: 350px;
+        font-size: 0.9em;
+      }
+      th, td {
+        padding: 5px 6px;
+      }
+      .filters label, .filters select, .filters input, .filters button {
+        font-size: 0.96em;
+      }
+      .cat-edit-select {
+        min-width: 90px;
+        font-size: 0.97em;
+        padding: 3px 4px;
+      }
+    }
   </style>
 </head>
 <body>
   <h1>Personal Finance Assistant</h1>
-  <p>Upload your bank or credit card CSV statements below.</p>
+  <p style="margin-bottom: 0.8em;">Upload your bank or credit card CSV statements below.</p>
   <input type="file" id="csvFiles" multiple accept=".csv" />
   <div class="filters" id="filters" style="display:none;">
     <label for="categoryFilter">Category:</label>
@@ -39,11 +146,11 @@
   <div class="summary" id="summary"></div>
   <div class="charts">
     <div class="chart-container">
-      <h3>Expenses by Category</h3>
+      <h3 style="font-size:1.07em;">Expenses by Category</h3>
       <canvas id="categoryChart" width="350" height="350"></canvas>
     </div>
     <div class="chart-container">
-      <h3>Monthly Expense Trend</h3>
+      <h3 style="font-size:1.07em;">Monthly Expense Trend</h3>
       <canvas id="trendChart" width="420" height="350"></canvas>
     </div>
   </div>
